--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: "Nantucket Education Trust"
 description: "Nantucket educational Trust"
 
-url: "http://localhost:4000"
+url: "http://nantucketedtrust.github.io/"
 
 paginate: 10
 
