--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: "Nantucket Education Trust"
-description: "Nantucket educational Trust"
+description: "Nantucket Education Trust"
 
 url: "http://nantucketedtrust.github.io/"
 
