--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 name: "Nantucket Education Trust"
 description: "Nantucket Education Trust"
-base_url: /
 paginate: 10
 markdown: rdiscount
 permalink: date
 pygments: true
 prose: 
-media: images
+media: 'images'
