--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 name: "Nantucket Education Trust"
 description: "Nantucket Education Trust"
+base_url: /
 paginate: 10
 markdown: rdiscount
 permalink: date
