--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: "Nantucket Education Trust"
 description: "Nantucket Education Trust"
-#base_url: /
+base_url: /
 rooturl: '_posts'
 siteurl: 'http://nantucketeducationtrust.org/'
 paginate: 10
@@ -8,4 +8,4 @@ markdown: rdiscount
 permalink: date
 pygments: true
 prose: 
-media: 'images'
+   media: 'images'
