--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 name: "Nantucket Education Trust"
 description: "Nantucket Education Trust"
 base_url: /
-siteurl: 'http://nantucketeducationtrust.org/'
+siteurl: "http://nantucketeducationtrust.org/"
 paginate: 10
 markdown: rdiscount
 permalink: date
 pygments: true
 prose: 
-   media: '/images/'
+   media: "images"
