--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ permalink: date
 pygments: true
 prose:
    siteurl: "http://nantucketeducationtrust.org/"
-   base_url: /images
-   media: "images"
+   base_url: /
+   media: images
